much more formatting fixed, including burg nav, transitions, pointer events and visibility for the nav icons and the zindex for multiple items going down to 98

--- a/src/App.scss
+++ b/src/App.scss
@@ -120,8 +120,12 @@ p {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  @include media(1080px) {
-    margin-top: 40px;
+  @include media(820px) {
+    position: fixed;
+    z-index: 100;
+    padding: 5px;
+    background-color: #362f2a;
+    width: 100%;
   }
   &__container {
     &--left {
@@ -145,6 +149,20 @@ p {
       height: 50px;
     }
 
+    &--snoozy:hover {
+      cursor: unset;
+    }
+    &--mob:hover {
+      @include media(820px) {
+        cursor: unset;
+        pointer-events: none;
+      }
+    }
+    &--2d {
+      @include media(820px) {
+        display: none;
+      }
+    }
     &--burg {
       transition: transform 0.8s ease;
       transform: rotate(0deg);
@@ -179,7 +197,8 @@ p {
   left: 50%;
   margin: 0;
   padding: 50px;
-  border: solid black;
+  z-index: 98;
+  background-color: black;
   transform: translate(-50%, -50%);
 }
 
@@ -217,6 +236,7 @@ p {
 
 .spotliContainer {
   display: flex;
+  z-index: 99;
   flex-direction: row;
   gap: 60px;
   padding: 30px;
@@ -246,7 +266,7 @@ p {
 
     @include media(820px) {
       width: 80%;
-      top: 80px;
+      top: 200px;
     }
   }
   &__spotli:hover {
@@ -324,6 +344,10 @@ p {
   margin: 50px;
   padding: 50px;
   box-sizing: border-box;
+  @include media(820px) {
+    top: 20px;
+  }
+
   &__article {
     display: flex;
     position: relative;
